updated author names in html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Gaurav Kesireddy">
+<meta name="author" content="Gaurav Kesireddy, Fariha Moomtaheen, Nitul Singha">
 
 <title>STA6257_Project_LSTM_Time_Series</title>
 <style>
@@ -77,7 +77,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Gaurav Kesireddy </p>
+             <p>Gaurav Kesireddy, Fariha Moomtaheen, Nitul Singha </p>
           </div>
   </div>
     
@@ -124,8 +124,8 @@ div.csl-indent {
 <section id="analysis-and-results" class="level2">
 <h2 class="anchored" data-anchor-id="analysis-and-results">Analysis and Results</h2>
 </section>
-<section id="data-and-visualisation" class="level2">
-<h2 class="anchored" data-anchor-id="data-and-visualisation">Data and Visualisation</h2>
+<section id="data-and-visualization" class="level2">
+<h2 class="anchored" data-anchor-id="data-and-visualization">Data and Visualization</h2>
 </section>
 <section id="statistical-modeling" class="level2">
 <h2 class="anchored" data-anchor-id="statistical-modeling">Statistical Modeling</h2>
